# Apex-Game-Engine

./: .gitignore  Bootstrap-msvc.bat  Bootstrap.bat  CMakeLists.txt  CreateSolutionLinks.bat  README.md  dependencies.json  utility.cmake
Apex/: CMakeLists.txt
Apex/Asset/: CMakeLists.txt
Apex/Asset/include/Asset/: Mesh.h
Apex/Asset/src/: Mesh.cpp
Apex/Engine/include/: Api.h  CommandLineArguments.h  Startup.h
Apex/Engine/include/Apex/: InputManager.h  PlatformInput.h  Win32Window.h
Apex/Engine/src/: apex_pch.cpp
Apex/Engine/src/Apex/: Win32Window.cpp
Apex/Foundation/: ApexFoundation.natvis  CMakeLists.txt
Apex/Foundation/include/Concurrency/: Concurrency.h
Apex/Foundation/include/Containers/: AxArray.h  AxHashMap.h  AxList.h  (+3 more)
Apex/Foundation/src/: AxPool.cpp  Files.cpp  Logging.cpp  Memory.cpp  MemoryManager.cpp  PoolAllocator.cpp
Apex/Graphics/: ApexGraphics.natvis  CMakeLists.txt
Apex/Graphics/include/: gfx_config.h
Apex/Graphics/shaders/: debug_lines.frag  debug_lines.vert  descriptors.glh  standard_phong.frag  standard_phong.vert
Apex/Graphics/src/: DebugRenderer.cpp  GraphicsContext.cpp
Apex/ImGui/: ApexImGui.cpp  ApexImGui.h  CMakeLists.txt
Apex/Model/: CMakeLists.txt
Apex/Model/include/: MeshSerializer.h
Apex/Model/src/: MeshSerializer.cpp  MeshSerializerCli.cpp
Apex/Mount/: ApexMount.natvis  CMakeLists.txt
Apex/Mount/src/: Mount.cpp
Apex/Platform/: CMakeLists.txt
Apex/Platform/src/: PlatformGlfw.cpp  PlatformManagerWin32.cpp  PlatformWin32.cpp
Engine/: CMakeLists.txt
Engine/include/: CommandLineArguments.h  CommandLineParser.h  Console.h  GlobalDefines.h  Startup.h  apex_pch.h
Engine/include/Apex/: Application.h  Game.h  InputManager.h  ModelLoader.h  PlatformInput.h  ResourceManager.h  TypeInfo.h  Win32Application.h  Win32Window.h
Engine/src/: BasicComponents.cpp  CommandLineArguments.cpp  CommandLineParser.cpp  Console.cpp  Win32Application.cpp
Engine/src/Apex/: Application.cpp  BasicComponents.cpp  GltfModelLoader.cpp  InputManager.cpp  LuaManager.cpp  Transform.cpp  Win32Application.cpp  Win32Window.cpp  WindowsInput.cpp
ExternalLibraries/: CMakeLists.txt
ExternalLibraries/fastgltf/: CMakeLists.txt
ExternalLibraries/lua/: CMakeLists.txt
ExternalLibraries/simdjson/: CMakeLists.txt
Foundation/: CMakeLists.txt
Foundation/include/Concurrency/: Concurrency.h
Foundation/include/Containers/: AxArray.h  AxList.h  AxRange.h  AxSparseMap.h  AxSparseSet.h  AxStaticString.h  AxString.h  AxStringRef.h  AxStringView.h  AxUnorderedArray.h
Foundation/include/Core/: Asserts.h  Delegate.h  Files.h  Formatting.h  Logging.h  Platform.h  TypeTraits.h  Types.h  Utility.h
Foundation/include/Foundation/: BasicDefines.h  Platform.h  axAsserts.h  axConcurrency.h  axContainers.h  axLogging.h  axMath.h  axMemory.h  axTypes.h
Foundation/include/Math/: Color.h  Math.h  Math.inl  Matrix4x4.h  Matrix4x4.inl  Quaternion.h  Quaternion.inl  Random.h  Utility.h  Vector.inl  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
Foundation/include/Memory/: ArenaAllocator.h  AxHandle.h  AxManagedClass.h  IMemoryTracker.h  Memory.h  MemoryManager.h  MemoryManagerImpl.h  MemoryPool.h  MemoryStats.h  PoolAllocator.h  SharedPtr.h  SimpleHeapAllocator.h  StackAllocator.h  UniquePtr.h
Foundation/src/: ArenaAllocator.cpp  Concurrency.cpp  Console.cpp  Files.cpp  Formatting.cpp  Logging.cpp  Math.cpp  Memory.cpp  MemoryManager.cpp  PoolAllocator.cpp  Random.cpp  SimpleHeapAllocator.cpp  StackAllocator.cpp  axConcurrency.cpp  axLogging.cpp  axMath.cpp  axMemory.cpp
Graphics/: CMakeLists.txt
Graphics/include/: gfx_config.h
Graphics/include/Graphics/: Camera.h  CommandList.h  Factory.h  ForwardRenderer.h  GfxContext.h  GraphicsContext.h  MeshManager.h  Renderer.h
Graphics/shaders/: basic.frag  basic.vert  cloth_applyForces.comp  cloth_init.comp  cloth_spring.comp  descriptors.glh  screen.frag  screen.vert  standard_phong.frag  standard_phong.vert
Graphics/src/: CommandList.cpp  ForwardRenderer.cpp  GfxContext.cpp  GraphicsContext.cpp  Primitives.cpp  Renderer.cpp
Graphics/src/Geometry/: IndexBufferGPU.cpp  VertexBufferGPU.cpp
Graphics/src/Vulkan/: BasicPipeline.cpp  BasicRenderPass.cpp  CameraDescriptorSetLayout.cpp  Quad.cpp  ScreenPipeline.cpp  VulkanBuffer.cpp  VulkanComputePipeline.cpp  VulkanContext.cpp  VulkanDebug.cpp  VulkanDebugMessenger.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanFunctions.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanMemoryAllocatorImpl.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanUtility.cpp
Graphics/src/Window/: Win32Window.cpp
Samples/TerrainGenerator/: CMakeLists.txt  TerrainGenerator.cpp  simulate_erosion.comp
Tests/: CMakeLists.txt
Tests/Engine/: CMakeLists.txt  StringHash.h  TestCommandLineArguments.cpp  TestCommandLineParser.cpp  TestEcs.cpp  TestGraphics.cpp  TestLoader.cpp  TestMain.cpp  TestResourceManagement.cpp  TestTypeInfo.cpp  TestWindow.cpp
Tests/Foundation/: CMakeLists.txt  Common.h  TestAxRange.cpp  TestConcurrency.cpp  TestContainers.cpp  TestDelegate.cpp  TestFiles.cpp  TestHeapAllocator.cpp  TestLogging.cpp  TestMain.cpp  TestMath.cpp  TestMatrix.cpp  TestMemory.cpp  TestRanges.cpp  TestStrings.cpp  TestTypeInfo.cpp
Tests/Graphics/: CMakeLists.txt  ObjLoader.cpp.skip  ObjLoader.h  TestMain.cpp
Tests/Mount/: CMakeLists.txt  TestMount.cpp
Tests/Platform/: CMakeLists.txt  TestPlatform.cpp
Tests/Scripting/: CMakeLists.txt  IpcConnection.cpp  IpcConnection.h  LuaEcsExample.cpp  LuaEcsExample.h  LuaSimpleExample.cpp  LuaSimpleExample.h  LuaStateMachineExample.cpp  LuaStateMachineExample.h  Main.cpp  TestScripting.cpp
Tests/Scripting/scripts/: test_cameratransform.lua  test_geometry.lua  test_state_machine.lua
Tests/Startup/: CMakeLists.txt  ClothSim.h  IKTrial.cpp  InverseKinematics.h  TestGame.h  TestWindow.cpp
Tools/PythonTools/: CMakeLists.txt  ExamplePlane.axmesh  example_axmesh_read.py  example_axmesh_write.py
Tools/PythonTools/src/: PyApexAsset.cpp  PyApexModel.cpp
(+109 files in other folders)
